// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnnualTargetHours should display "-" for headers without targetData 1`] = `
"<div>
  <div class=\\"accruals-container\\">
    <form class=\\"grey-border\\">
      <h1 class=\\"govuk-heading-m newline\\">No agreement has been found</h1>
      <table class=\\"govuk-table\\">
        <tbody class=\\"govuk-table__body\\">
          <tr class=\\"govuk-table__row\\">
            <th data-testid=\\"annualTargetHours-total-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Total</th>
            <td data-testid=\\"annualTargetHours-total-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th data-testid=\\"annualTargetHours-worked-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Worked</th>
            <td data-testid=\\"annualTargetHours-worked-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th data-testid=\\"annualTargetHours-remaining-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Remaining</th>
            <td data-testid=\\"annualTargetHours-remaining-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th data-testid=\\"annualTargetHours-target-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Target</th>
            <td data-testid=\\"annualTargetHours-target-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
        </tbody>
      </table>
    </form>
  </div>
</div>"
`;

exports[`AnnualTargetHours should display correct text for remaining hours with targetData 1`] = `
"<div>
  <div class=\\"accruals-container\\">
    <form class=\\"grey-border\\">
      <h1 class=\\"govuk-heading-m newline\\"><span data-testid=\\"annualTargetHours-title-span\\">Annual target hours
 <strong>2182</strong> remaining</span></h1>
      <table class=\\"govuk-table\\">
        <tbody class=\\"govuk-table__body\\">
          <tr class=\\"govuk-table__row\\">
            <th data-testid=\\"annualTargetHours-total-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Total</th>
            <td data-testid=\\"annualTargetHours-total-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">2192:00</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th data-testid=\\"annualTargetHours-worked-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Worked</th>
            <td data-testid=\\"annualTargetHours-worked-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">10:00</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th data-testid=\\"annualTargetHours-remaining-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Remaining</th>
            <td data-testid=\\"annualTargetHours-remaining-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">2182:00</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th data-testid=\\"annualTargetHours-target-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Target</th>
            <td data-testid=\\"annualTargetHours-target-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">2192:00</td>
          </tr>
        </tbody>
      </table>
    </form>
  </div>
</div>"
`;

exports[`AnnualTargetHours should display correct text for remaining hours without targetData 1`] = `
"<div>
  <div class=\\"accruals-container\\">
    <form class=\\"grey-border\\">
      <h1 class=\\"govuk-heading-m newline\\">No agreement has been found</h1>
      <table class=\\"govuk-table\\">
        <tbody class=\\"govuk-table__body\\">
          <tr class=\\"govuk-table__row\\">
            <th data-testid=\\"annualTargetHours-total-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Total</th>
            <td data-testid=\\"annualTargetHours-total-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th data-testid=\\"annualTargetHours-worked-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Worked</th>
            <td data-testid=\\"annualTargetHours-worked-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th data-testid=\\"annualTargetHours-remaining-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Remaining</th>
            <td data-testid=\\"annualTargetHours-remaining-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th data-testid=\\"annualTargetHours-target-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Target</th>
            <td data-testid=\\"annualTargetHours-target-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
        </tbody>
      </table>
    </form>
  </div>
</div>"
`;

exports[`AnnualTargetHours should render a table with correct headers 1`] = `
"<div>
  <div class=\\"accruals-container\\">
    <form class=\\"grey-border\\">
      <h1 class=\\"govuk-heading-m newline\\">No agreement has been found</h1>
      <table class=\\"govuk-table\\">
        <tbody class=\\"govuk-table__body\\">
          <tr class=\\"govuk-table__row\\">
            <th data-testid=\\"annualTargetHours-total-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Total</th>
            <td data-testid=\\"annualTargetHours-total-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th data-testid=\\"annualTargetHours-worked-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Worked</th>
            <td data-testid=\\"annualTargetHours-worked-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th data-testid=\\"annualTargetHours-remaining-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Remaining</th>
            <td data-testid=\\"annualTargetHours-remaining-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th data-testid=\\"annualTargetHours-target-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Target</th>
            <td data-testid=\\"annualTargetHours-target-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
        </tbody>
      </table>
    </form>
  </div>
</div>"
`;
